--- a/frontend/src/pages/ExamplesList.css
+++ b/frontend/src/pages/ExamplesList.css
@@ -8,17 +8,17 @@
     opacity: 1;
 }
 
-.exampleCard:hover {
+.exampleListCard:hover {
     transition-duration: 0.2s;
     border: #3DDD3D solid 1.5px;
     /* background-color: rgba(15, 95, 223, 0.031); */
 }
 
-.exampleCard a {
+.exampleListCard a {
     text-decoration: none;
 }
 
-.exampleCardInvalid {
+.exampleListCardInvalid {
     width: 265px;
     height: 360px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
@@ -27,7 +27,8 @@
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
     filter: grayscale(100%);
-    animation: pulse 1.5s infinite;
+    animation: pulse 1.5s;
+    animation-iteration-count: 3.3;
 }
 
 @keyframes pulse {
@@ -113,7 +114,7 @@
     box-shadow: 0px 3px 6px #00000029;
     border-radius: 16px;
     opacity: 1;
-    height: 470px;
+    height: 500px;
 }
 
 #searching-examples-timeout {
